alignment fixed

--- a/src/Layout/SideBar/SideBar.scss
+++ b/src/Layout/SideBar/SideBar.scss
@@ -18,6 +18,8 @@
         width: 50px;
         height: 50px;
         margin: 10px 0;
+        margin-right:auto;
+        margin-left:auto;
         color: $clr-white;
 
         &:hover {
