--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -44,7 +44,7 @@ body {
         background-color: $clr-white-opacity;
         border: 7px solid $clr-white;
         border-radius: 8px;
-        font-size: 1.1em;
+        font-size: 1em;
         font-weight: bolder;
         cursor: pointer;
         padding: 0.6em 1.2em;
